--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hi</h1>
+    <!-- nav -->
+    <nav>
+        <div class="logo">Vibol</div>
+        <ul>
+            <li><a href=""></a></li>
+        </ul>
+    </nav>
 </body>
 </html>
