--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <!-- nav -->
     <nav>
         <div class="logo">Vibol</div>
-        <ul>
-            <li><a href=""></a></li>
+        <ul class="menu-item">
+            <li><a class="active" href="#">Home</a></li>
+            <li><a href="page/education.html">Education</a></li>
+            <li><a href="page/aboutme.html">About me</a></li>
+            <li><a href="page/contact.html">Contact me</a></li>
         </ul>
     </nav>
+    <!-- end nav -->
+    
 </body>
 </html>
