--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <!-- nav -->
@@ -19,6 +20,36 @@
         </ul>
     </nav>
     <!-- end nav -->
-    
+    <!-- content -->
+    <div class="content">
+        <div class="banner">
+            <img src="img/ban1.jpg">
+        </div>
+        <div class="text"><p>Hello, I am​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​ <h1>Khan Vibol</h1> I am a student of Passerellesnumeriques Cambodia. I am 20 years old  form Prey Veng province Cambodia. In the future I want to be a webdeveloper, webdesigner and business man.</p>
+        <div class="btn-group">
+            <button class="btn"><a href="page/contact.html">Contact me</a></button>
+            <button class="btn no-bg"><a href="/">Download CV</a></button>
+        </div>
+    </div>
+        </div>
+    <!-- end content -->
+    <!-- footer -->
+    <footer>
+        <h3>You can contact me by my socia media</h3>
+        <div class="icons">
+            <div class="cicle">
+                <i class=" fa fa-facebook fa-2x"></i>
+            </div>
+            <div class="cicle">
+                <i class=" fa fa-paper-plane fa-2x"></i>
+            </div>
+            <div class="cicle">
+                <i class=" fa fa-twitter fa-2x"></i>
+            </div>
+            <div class="cicle">
+                <i class=" fa fa-instagram fa-2x"></i>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
