--- a/index.html
+++ b/index.html
@@ -38,18 +38,19 @@
         <h3>You can contact me by my socia media</h3>
         <div class="icons">
             <div class="cicle">
-                <i class=" fa fa-facebook fa-2x"></i>
+                <a href="https://www.facebook.com/login"><i class=" fa fa-facebook fa-2x"></i></a>
             </div>
             <div class="cicle">
-                <i class=" fa fa-paper-plane fa-2x"></i>
+                <a href="https://telegr.am/user_mgt/login"><i class=" fa fa-paper-plane fa-2x"></i></a>
             </div>
             <div class="cicle">
-                <i class=" fa fa-twitter fa-2x"></i>
+                <a href="https://twitter.com/?lang=en"><i class=" fa fa-twitter fa-2x"></i></a>
             </div>
             <div class="cicle">
-                <i class=" fa fa-instagram fa-2x"></i>
+                <a href="https://www.instagram.com/accounts/login/?hl=en"><i class="fa fa-instagram fa-2x"></i></a>
             </div>
         </div>
     </footer>
+    <!-- end footer -->
 </body>
 </html>
