--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="banner">
             <img src="img/ban1.jpg">
         </div>
-        <div class="text"><p>Hello, I am​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​ <h1>Khan Vibol</h1> I am a student of Passerellesnumeriques Cambodia. I am 20 years old  form Prey Veng province Cambodia. In the future I want to be a webdeveloper, webdesigner and business man.</p>
+        <div class="text"><p>Hello, I am​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​ <span>Khan Vibol</span> I am a student of Passerellesnumeriques Cambodia. I am 20 years old  form Prey Veng province Cambodia. In the future I want to be a webdeveloper, webdesigner and business man.</p>
         <div class="btn-group">
             <button class="btn"><a href="page/contact.html">Contact me</a></button>
             <button class="btn no-bg"><a href="/">Download CV</a></button>
@@ -35,7 +35,7 @@
     <!-- end content -->
     <!-- footer -->
     <footer>
-        <h3>You can contact me by my socia media</h3>
+        <h3 class='color-black'>You can contact me by my socia media</h3>
         <div class="icons">
             <div class="cicle">
                 <a href="https://www.facebook.com/login"><i class=" fa fa-facebook fa-2x"></i></a>
