--- a/index.html
+++ b/index.html
@@ -25,29 +25,38 @@
         <div class="banner">
             <img src="img/ban1.jpg">
         </div>
-        <div class="text"><p>Hello, I am​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​ <span>Khan Vibol</span> I am a student of Passerellesnumeriques Cambodia. I am 20 years old  form Prey Veng province Cambodia. In the future I want to be a webdeveloper, webdesigner and business man.</p>
-        <div class="btn-group">
-            <button class="btn"><a href="page/contact.html">Contact me</a></button>
-            <button class="btn no-bg"><a href="/">Download CV</a></button>
+        <div class="text">
+            <p>Hello, I am​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​ <span>Khan Vibol</span> I am a student of Passerellesnumeriques Cambodia. I am 20 years old  form Prey Veng province Cambodia. In the future I want to be a webdeveloper, webdesigner and business man.</p>
+            <div class="btn-group">
+                <a class="btn mt-3" href="">Download CV</a>
+                <a class="btn mt-3 no-bg" href="">Contact me</a>
+            </div>
         </div>
     </div>
-        </div>
     <!-- end content -->
     <!-- footer -->
     <footer>
-        <h3 class='color-black'>You can contact me by my socia media</h3>
-        <div class="icons">
-            <div class="cicle">
-                <a href="https://www.facebook.com/login"><i class=" fa fa-facebook fa-2x"></i></a>
-            </div>
-            <div class="cicle">
-                <a href="https://telegr.am/user_mgt/login"><i class=" fa fa-paper-plane fa-2x"></i></a>
-            </div>
-            <div class="cicle">
-                <a href="https://twitter.com/?lang=en"><i class=" fa fa-twitter fa-2x"></i></a>
-            </div>
-            <div class="cicle">
-                <a href="https://www.instagram.com/accounts/login/?hl=en"><i class="fa fa-instagram fa-2x"></i></a>
+        <ul class="menu-item menu-footer">
+            <li><a class="active" href="#">Home</a></li>
+            <li><a href="page/education.html">Education</a></li>
+            <li><a href="page/aboutme.html">About me</a></li>
+            <li><a href="page/contact.html">Contact me</a></li>
+        </ul>
+        <div class="icons-footer">
+            <h3 class='color-black'>You can contact me by my socia media</h3>
+            <div class="icons">
+                <div class="cicle">
+                    <a href="https://www.facebook.com/login"><i class=" fa fa-facebook fa-2x"></i></a>
+                </div>
+                <div class="cicle">
+                    <a href="https://telegr.am/user_mgt/login"><i class=" fa fa-paper-plane fa-2x"></i></a>
+                </div>
+                <div class="cicle">
+                    <a href="https://twitter.com/?lang=en"><i class=" fa fa-twitter fa-2x"></i></a>
+                </div>
+                <div class="cicle">
+                    <a href="https://www.instagram.com/accounts/login/?hl=en"><i class="fa fa-instagram fa-2x"></i></a>
+                </div>
             </div>
         </div>
     </footer>
