--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h3 class='color-black'>You can contact me by my socia media</h3>
             <div class="icons">
                 <div class="cicle">
-                    <a href="https://www.facebook.com/login"><i class=" fa fa-facebook fa-2x"></i></a>
+                    <a href=""><i class=" fa fa-facebook fa-2x"></i></a>
                 </div>
                 <div class="cicle">
                     <a href="https://telegr.am/user_mgt/login"><i class=" fa fa-paper-plane fa-2x"></i></a>
