--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <div class="text">
             <p>Hello, I am​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​ <span>Khan Vibol</span> I am a student of Passerellesnumeriques Cambodia. I am 20 years old  form Prey Veng province Cambodia. In the future I want to be a webdeveloper, webdesigner and business man.</p>
             <div class="btn-group">
-                <a class="btn mt-3" href="">Download CV</a>
-                <a class="btn mt-3 no-bg" href="">Contact me</a>
+                <a class="btn mt-3" href="CV/CV-KhanVibol.pdf" download="">Download CV</a>
+                <a class="btn mt-3 no-bg" href="page/contact.html">Contact me</a>
             </div>
         </div>
     </div>
